--- a/305HACK-SPRING25.html
+++ b/305HACK-SPRING25.html
@@ -709,13 +709,26 @@ body {
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link" href="index.html">Code Crunch</a></li>
+                <li class="nav-item"><a class="nav-link" href="hackathons.html">Hackathons</a></li>
                 <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                 <li class="nav-item"><a class="nav-link" href="#agenda">Agenda</a></li>
                 <li class="nav-item"><a class="nav-link" href="#tracks">Tracks</a></li>
                 <li class="nav-item"><a class="nav-link" href="#awards">Awards</a></li>
                 <li class="nav-item"><a class="nav-link" href="#faqs">FAQ</a></li>
-                <li class="nav-item"><a class="nav-link" href="#contributors">Contributors</a></li>
+
                 <li class="nav-item"><a class="nav-link" href="CC-GRAPHIC-305.HTML">305 Graphics</a></li>
+
+                <!-- <li class="nav-item"><a class="nav-link" href="#judges">Judges</a></li> -->
+                <li class="nav-item"><a class="nav-link" href="hack-submissions-req.html">Submissions Req.</a></li>
+                <li class="nav-item"><a class="nav-link" href="hack-evaluation-criteria.html">Judging Criteria</a></li>
+                <li class="nav-item"><a class="nav-link" href="hack-code-of-conduct.html">Code of Conduct</a></li>
+                <li class="nav-item"><a class="nav-link" href="hack-rules.html">Rules</a></li>
+                <li class="nav-item"><a class="nav-link" href="hack-resources.html">Resources</a></li>
+
+                <li class="nav-item"><a class="nav-link" href="#contributors">Contributors</a></li>
+
+
+
                 
             </ul>
         </div>
