--- a/HACKFIESTA-SPRING25.HTML
+++ b/HACKFIESTA-SPRING25.HTML
@@ -235,9 +235,10 @@
                 <li class="nav-item"><a class="nav-link" href="hackathons.html">Hackathons</a></li>
                 <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                 <li class="nav-item"><a class="nav-link" href="#tracks">Tracks</a></li>
-                <li class="nav-item"><a class="nav-link" href="hack-submissions-req.html">Submissions Req.</a></li>
                 <li class="nav-item"><a class="nav-link" href="#judges">Judges</a></li>
                 <li class="nav-item"><a class="nav-link" href="#faq">FAQ</a></li>
+                <li class="nav-item"><a class="nav-link" href="hack-submissions-req.html">Submissions Req.</a></li>
+                <li class="nav-item"><a class="nav-link" href="hack-evaluation-criteria.html">Judging Criteria</a></li>
                 <li class="nav-item"><a class="nav-link" href="hack-code-of-conduct.html">Code of Conduct</a></li>
                 <li class="nav-item"><a class="nav-link" href="hack-rules.html">Rules</a></li>
                 <li class="nav-item"><a class="nav-link" href="hack-resources.html">Resources</a></li>
