--- a/305HACK-SPRING25.html
+++ b/305HACK-SPRING25.html
@@ -2838,23 +2838,42 @@ body {
 
 
 
-
-
+<!-- 
+https://github.com/user-attachments/assets/30dc5b3d-0879-4c39-8653-ed451e790676 -->
 
 
 <section id="collaborators" style="padding: 80px 0; background: linear-gradient(to bottom, #f8f9fa, #ffffff); font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
     <div style="max-width: 1200px; margin: 0 auto; padding: 0 20px;">
         <div style="text-align: center; margin-bottom: 50px;">
             <h2 style="font-size: 36px; font-weight: 800; color: #333; margin-bottom: 15px; position: relative; display: inline-block;">
-                FIU Collaborators
+                Organizations Collaborators
                 <span style="display: block; width: 80px; height: 4px; background: linear-gradient(135deg, #FF4D00, #FFB703); margin: 12px auto 0;"></span>
             </h2>
             <p style="color: #555; font-size: 18px; max-width: 700px; margin: 0 auto;">
-                We're proud to partner with these exceptional student organizations across Florida International University.
+                We're proud to highlight these student groups and external organizations who are contributing to our hackathon by hosting workshops or sessions. 
             </p>
         </div>
         
+       
+
         <div style="display: grid; grid-template-columns: repeat(auto-fill, minmax(340px, 1fr)); gap: 25px;">
+
+
+<!-- CARDANO -->
+<div style="background: white; border-radius: 16px; overflow: hidden; box-shadow: 0 10px 30px rgba(0, 0, 0, 0.08); transition: all 0.3s ease; position: relative; display: flex; align-items: center; gap: 20px; padding: 25px;" onmouseover="this.style.transform='translateY(-8px)'; this.style.boxShadow='0 15px 35px rgba(0, 0, 0, 0.1)';" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 10px 30px rgba(0, 0, 0, 0.08)';">
+    <div style="width: 70px; height: 70px; display: flex; justify-content: center; align-items: center; flex-shrink: 0; background: transparent;">
+        <img src="https://github.com/user-attachments/assets/30dc5b3d-0879-4c39-8653-ed451e790676" alt="Cardano Logo" style="max-width: 100%; max-height: 100%; object-fit: contain;">
+    </div>
+    <div>
+        <h3 style="font-size: 18px; font-weight: 700; color: #333; margin: 0 0 8px 0;">Cardano</h3>
+        <p style="color: #666; font-size: 14px; line-height: 1.5; margin: 0;">A pioneering blockchain platform built on peer-reviewed research and developed through evidence-based methods. Cardano supports decentralized applications, innovation in digital identity, and sustainability in Web3.</p>
+    </div>
+</div>
+
+
+
+
+
             <!-- Artificial Intelligence Organization -->
             <div style="background: white; border-radius: 16px; overflow: hidden; box-shadow: 0 10px 30px rgba(0, 0, 0, 0.08); transition: all 0.3s ease; position: relative; display: flex; align-items: center; gap: 20px; padding: 25px;" onmouseover="this.style.transform='translateY(-8px)'; this.style.boxShadow='0 15px 35px rgba(0, 0, 0, 0.1)';" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 10px 30px rgba(0, 0, 0, 0.08)';">
                 <div style="width: 70px; height: 70px; border-radius: 50%; background: linear-gradient(135deg, #0073E6, #00B4D8); display: flex; justify-content: center; align-items: center; flex-shrink: 0;">
