--- a/305HACK-SPRING25.html
+++ b/305HACK-SPRING25.html
@@ -1955,12 +1955,12 @@ body {
         </p>
         
         <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 25px;">
-            <!-- Award Card 1 -->
+            <!-- Award Card 1
             <div style="background: white; border-radius: 16px; overflow: hidden; box-shadow: 0 10px 30px rgba(0, 0, 0, 0.08); transition: all 0.3s ease; position: relative; text-align: center; padding: 30px 20px; border-top: 5px solid #FF4D00;" onmouseover="this.style.transform='translateY(-10px)'; this.style.boxShadow='0 15px 40px rgba(0, 0, 0, 0.15)';" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 10px 30px rgba(0, 0, 0, 0.08)';">
                 <div style="font-size: 48px; margin-bottom: 15px;">🏆</div>
                 <h3 style="color: #333; font-size: 22px; font-weight: 700; margin-bottom: 10px;">Best Beginner Hack</h3>
                 <p style="color: #666; font-size: 16px;">Celebrating first-time hackers who demonstrate exceptional creativity and technical achievement.</p>
-            </div>
+            </div> -->
             
             <!-- Award Card 2 -->
             <div style="background: white; border-radius: 16px; overflow: hidden; box-shadow: 0 10px 30px rgba(0, 0, 0, 0.08); transition: all 0.3s ease; position: relative; text-align: center; padding: 30px 20px; border-top: 5px solid #0073E6;" onmouseover="this.style.transform='translateY(-10px)'; this.style.boxShadow='0 15px 40px rgba(0, 0, 0, 0.15)';" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 10px 30px rgba(0, 0, 0, 0.08)';">
