--- a/hack-evaluation-criteria.html
+++ b/hack-evaluation-criteria.html
@@ -3,6 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Bootstrap CSS -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+<!-- Bootstrap JS Bundle (includes Popper) -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+
     <title>Hackathon Resources | Code Crunch</title>
     <style>
         :root {
@@ -50,6 +58,26 @@ body {
     top: 0;
     z-index: 10;
 }
+
+       /* mathcing nav bar with main page */
+       .navbar-custom {
+        background-color: var(--bg-card) !important;
+        box-shadow: var(--shadow);
+        }
+
+        .navbar-custom .navbar-brand,
+        .navbar-custom .nav-link {
+        color: var(--text-secondary);
+        font-weight: 500;
+        }
+
+        .navbar-custom .nav-link.active,
+        .navbar-custom .nav-link:hover {
+        color: var(--primary) !important;
+        }
+        /* end mathcing nav bar with main page */
+
+
 
 .navbar-container {
     display: flex;
@@ -558,25 +586,35 @@ body {
     </style>
 </head>
 <body>
-    <nav class="navbar">
-        <div class="container navbar-container">
-            <a href="#" class="logo">
-                <div class="logo-icon">CC</div>
-                <span>Code Crunch</span>
-            </a>
-            <div class="nav-links">
-                <a href="index.html" class="nav-link">Home</a>
-                <a href="hackathons.html" class="nav-link">Hackathons</a>
-                <a href="hack-resources.html" class="nav-link">Resources</a>
-                <a href="hack-submissions-req.html" class="nav-link">Submission Requirements</a>
-                <a href="hack-evaluation-criteria.html" class="nav-link active">Judging Criteria</a>
-                <a href="hack-rules.html" class="nav-link">Rules & Guidelines</a>
-                <a href="hack-code-of-conduct.html" class="nav-link">Code of Conduct</a>
-                <a href="https://www.linkedin.com/company/code-crunch-club/" class="nav-link">LinkedIn Community</a>
+    <nav class="navbar navbar-expand-lg navbar-custom sticky-top">
 
-            </div>
-        </div>
-    </nav>
+<div class="container px-lg-5">
+  <!-- Logo and Brand Name -->
+  <a class="navbar-brand" href="index.html">
+    <img src="https://github.com/user-attachments/assets/c359ccd5-2470-4ba5-a8fe-a32ee12a4e0a" alt="Code Crunch Club Logo" height="50" class="me-2" />
+    Code Crunch
+  </a>
+
+  <!-- Mobile Toggle -->
+  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" 
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <!-- Navigation Links -->
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+      <li class="nav-item"><a class="nav-link" href="hackathons.html">Hackathons</a></li>
+      <li class="nav-item"><a class="nav-link" href="hack-resources.html">Resources</a></li>
+      <li class="nav-item"><a class="nav-link active" href="hack-submissions-req.html">Submission Requirements</a></li>
+      <li class="nav-item"><a class="nav-link" href="hack-evaluation-criteria.html">Judging Criteria</a></li>
+      <li class="nav-item"><a class="nav-link" href="hack-rules.html">Rules & Guidelines</a></li>
+      <li class="nav-item"><a class="nav-link" href="hack-code-of-conduct.html">Code of Conduct</a></li>
+      <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/company/code-crunch-club/">LinkedIn Community</a></li>
+    </ul>
+  </div>
+</div>
+</nav>
 
     <header class="header">
         <div class="container header-container">
