--- a/305HACK-SPRING25.html
+++ b/305HACK-SPRING25.html
@@ -2866,7 +2866,7 @@ https://github.com/user-attachments/assets/30dc5b3d-0879-4c39-8653-ed451e790676 
     </div>
     <div>
         <h3 style="font-size: 18px; font-weight: 700; color: #333; margin: 0 0 8px 0;">Cardano</h3>
-        <p style="color: #666; font-size: 14px; line-height: 1.5; margin: 0;">A pioneering blockchain platform built on peer-reviewed research and developed through evidence-based methods. Cardano supports decentralized applications, innovation in digital identity, and sustainability in Web3.</p>
+        <p style="color: #666; font-size: 14px; line-height: 1.5; margin: 0;">A pioneering blockchain platform built on peer-reviewed research and developed through evidence-based methods. Cardano supports decentralized applications, innovation in digital identity, and sustainability in Web3. #Cardano #CardanoDays</p>
     </div>
 </div>
 
