--- a/cc-volunteer.html
+++ b/cc-volunteer.html
@@ -91,7 +91,7 @@
 </head>
 <body>
 
-  <h1>🎉 Hackathon Volunteer Process</h1>
+  <h1>🎉 Hackathon Volunteer Process | <a href="https://go.fiu.edu/CODECRUNCH-HACK-VOLUNTEER" target="_blank">go.fiu.edu/CODECRUNCH-HACK-VOLUNTEER</a></h1>
 
   <div class="note">
     🔐 <strong>Access is granted only to the Gmail address you applied with.</strong><br />
