--- a/cc-volunteer.html
+++ b/cc-volunteer.html
@@ -91,8 +91,10 @@
 </head>
 <body>
 
-  <h1>🎉 Hackathon Volunteer Process | <a href="https://go.fiu.edu/CODECRUNCH-HACK-VOLUNTEER" target="_blank">go.fiu.edu/CODECRUNCH-HACK-VOLUNTEER</a></h1>
+  <h1>🎉 Hackathon Volunteer HUB </a></h1>
+  <h3>Direct Link<a href="https://go.fiu.edu/CODECRUNCH-HACK-VOLUNTEER" target="_blank">go.fiu.edu/CODECRUNCH-HACK-VOLUNTEER</a></h3>
 
+  <h2>🎉 Hackathon Volunteer Process </a></h2>
   <div class="note">
     🔐 <strong>Access is granted only to the Gmail address you applied with.</strong><br />
     If you're using a different Google account, please switch to the one used on your application form.
