--- a/cc-volunteer.html
+++ b/cc-volunteer.html
@@ -92,7 +92,7 @@
 <body>
 
   <h1>🎉 Hackathon Volunteer HUB </a></h1>
-  <h3>Direct Link<a href="https://go.fiu.edu/CODECRUNCH-HACK-VOLUNTEER" target="_blank">go.fiu.edu/CODECRUNCH-HACK-VOLUNTEER</a></h3>
+  <h3>Direct Link: <a href="https://go.fiu.edu/CODECRUNCH-HACK-VOLUNTEER" target="_blank">go.fiu.edu/CODECRUNCH-HACK-VOLUNTEER</a></h3>
 
   <h2>🎉 Hackathon Volunteer Process </a></h2>
   <div class="note">
@@ -143,7 +143,7 @@
        
         <a href="https://ba-00001.github.io/codecrunchclub/hack-evaluation-criteria.html" target="_blank">Evaluation criteria</a>.
       </p>
-    <p>
+    <p>If the hackathons end on a Sunday, the evaluation process will begin on the next day.</p>
       If you're a <strong>Judge</strong>, please complete the evaluation Google Sheet within 48 hours of the evaluation start date.
     </p>
 
@@ -153,11 +153,12 @@
 
     <li><strong>Mentorship</strong></li>
     <p>
-      Mentorship will take place during the hackathon in dedicated Discord voice channels from <strong>9 AM EST – 8 PM EST</strong>.<br />
+      Mentorship will take place during the hackathon in dedicated Discord voice channels from <strong>6:00 pm EST – 9 pm EST</strong>.<br /><br />
       Please make an announcement in the hackathon Discord channel when you're available for mentorship (minimum of 4 hours).
     </p>
 
     <li><strong>Workshop Host / Speaker</strong></li>
+    <li>Each session has a required duration of 1hr.</li>
     <p>
       <strong>Google Slide Template:</strong> Please make a copy: 
       <a href="https://docs.google.com/presentation/d/183bmzBqLGtcG6sQcrnebPODynKxBLZY7KFqwMCK6Zw4/edit?usp=sharing" target="_blank">Workshop Slides Template</a>.
@@ -167,14 +168,18 @@
   </ul>
 
   <div class="note">
-    💬 If you have questions or don't see the <code>#hack-volunteers</code> channel, DM <strong>@codecrunchclub</strong> to update your volunteer role.
+    💬 If you have questions or don't see the <code>#hack-volunteers</code> channel on Discord, DM <strong>@codecrunchclub</strong> to update your volunteer role.
   </div>
 
   <h2>🚀 Upcoming Hackathons</h2>
 
   <h3>📝 305 Hack - Spring 2025 Evaluation Process</h3>
   <p class="note">
-    📅 Evaluation begins on <strong>March 31, 2025 @ 6:15 PM EST</strong>. Please check the sheet for updates.
+    📅 Projects submissions close on <strong>March 31, 2025 @ 6:15 PM EST</strong>. 
+  </p>
+  
+  <p >
+     Evaluation begins on <strong>TUE April 1st, 2025 @ 11 am EST and ends on THU April 3st, 2025 @ 11 am</strong>. 
   </p>
   <p>
     Judges must complete the evaluation Google Sheet within 48 hours of the start date: 
