--- a/hackathons.html
+++ b/hackathons.html
@@ -691,9 +691,9 @@
                                     <span class="tag">Blockchain</span>
                                 </div>
                             </div>
-                            <a href="#" class="button">
+                            <a href="HACK-CODESTORM.HTML" class="button">
                                 <i class="bi bi-info-circle"></i>
-                                Website Under Construction
+                                Learn
                             </a>
                         </div>
                     </div>
