--- a/hack1-resources.html
+++ b/hack1-resources.html
@@ -648,6 +648,8 @@
             <div class="breadcrumbs">
                 <a href="index.html" class="breadcrumb-link">Home</a>
                 <span class="breadcrumb-separator">/</span>
+                <a href="hackathons.html" class="breadcrumb-link">Hackathons</a>
+                <span class="breadcrumb-separator">/</span>
                 <a href="hackathons.html" class="breadcrumb-link">Hacks Toolkit</a>
                 <span class="breadcrumb-separator">/</span>
                 <span>Resources</span>
