--- a/hack3-judging-criteria.html
+++ b/hack3-judging-criteria.html
@@ -631,6 +631,8 @@ body {
             <div class="breadcrumbs">
                 <a href="index.html" class="breadcrumb-link">Home</a>
                 <span class="breadcrumb-separator">/</span>
+                <a href="hackathons.html" class="breadcrumb-link">Hackathons</a>
+                <span class="breadcrumb-separator">/</span>
                 <a href="hackathons.html" class="breadcrumb-link">Hacks Toolkit</a>
                 <span class="breadcrumb-separator">/</span>
                 <span>Evaluation Criteria</span>
