--- a/hackathons.html
+++ b/hackathons.html
@@ -695,7 +695,9 @@
             <div class="breadcrumbs">
                 <a href="index.html" class="breadcrumb-link">Home</a>
                 <span class="breadcrumb-separator">/</span>
-                <span>Hackathon Schedule</span>
+                <a href="hackathons.html" class="breadcrumb-link">Hackathons</a>
+                <span class="breadcrumb-separator">/</span>
+                <span>Hackathon Schedule & Themes</span>
             </div>
             <h1 class="header-title">Hackathon Schedule & Themes</h1>
             <p class="header-subtitle">Join us for a year of exciting hackathons designed to challenge your skills and expand your network. From virtual to in-person events, we have something for everyone.</p>
