--- a/hacks-toolkit.html
+++ b/hacks-toolkit.html
@@ -498,6 +498,8 @@
             <div class="breadcrumbs">
                 <a href="index.html" class="breadcrumb-link">Home</a>
                 <span class="breadcrumb-separator">/</span>
+                <a href="hackathons.html" class="breadcrumb-link">Hackathons</a>
+                <span class="breadcrumb-separator">/</span>
                 <span>Hackathon Toolkit</span>
             </div>
             <h1 class="header-title">Hackathon Toolkit</h1>
