--- a/hack5-code-of-conduct.html
+++ b/hack5-code-of-conduct.html
@@ -361,7 +361,10 @@
   <!-- ✅ Header -->
   <header class="container">
     <div class="breadcrumbs">
-      <a href="index.html" class="breadcrumb-link">Home</a> / 
+      <a href="index.html" class="breadcrumb-link">Home</a>
+      <span class="breadcrumb-separator">/</span>
+      <a href="hackathons.html" class="breadcrumb-link">Hackathons</a>
+      <span class="breadcrumb-separator">/</span>
       <a href="hackathons.html" class="breadcrumb-link">Hacks Toolkit</a> / 
       <span>Hackathon Code of Conduct</span>
     </div>
