--- a/hackathons.html
+++ b/hackathons.html
@@ -744,6 +744,12 @@
                                 </div>
                             </div>
                             <div class="card-footer">
+                                 <!-- Register Now -->
+                                <a href="https://go.fiu.edu/cc-hacks" class="button">
+                                    <i class="bi bi-info-circle"></i>
+                                    Register Now
+                                </a>
+
                                 <a href="HACKFIESTA-SPRING25.HTML" class="button">
                                     <i class="bi bi-info-circle"></i>
                                     Learn More
@@ -785,6 +791,12 @@
                                 </div>
                             </div>
                             <div class="card-footer">
+                                <!-- Register Now -->
+                                <a href="https://go.fiu.edu/cc-hacks" class="button">
+                                <i class="bi bi-info-circle"></i>
+                                Register Now
+                                </a>
+
                                 <a href="305HACK-SPRING25.html" class="button">
                                     <i class="bi bi-info-circle"></i>
                                     Learn More
@@ -801,7 +813,7 @@
                                     <h3 class="event-title">CodeStorm</h3>
                                     <div class="event-date">
                                         <i class="bi bi-calendar-event"></i>
-                                        May 23-25, 2025
+                                        May 19-26, 2025
                                     </div>
                                 </div>
                                 <div class="header-right">
@@ -826,6 +838,11 @@
                                 </div>
                             </div>
                             <div class="card-footer">
+                                <!-- Register Now -->
+                                <a href="https://go.fiu.edu/cc-hacks" class="button">
+                                    <i class="bi bi-info-circle"></i>
+                                    Register Now
+                                    </a>
                                 <a href="HACK-CODESTORM.HTML" class="button">
                                     <i class="bi bi-info-circle"></i>
                                     Learn More
@@ -842,7 +859,7 @@
                                     <h3 class="event-title">SummerCodeX</h3>
                                     <div class="event-date">
                                         <i class="bi bi-calendar-event"></i>
-                                        July 25-27, 2025
+                                        July 21-28, 2025
                                     </div>
                                 </div>
                                 <div class="header-right">
@@ -868,6 +885,11 @@
                                 </div>
                             </div>
                             <div class="card-footer">
+                                <!-- Register Now -->
+                                <a href="https://go.fiu.edu/cc-hacks" class="button">
+                                    <i class="bi bi-info-circle"></i>
+                                    Register Now
+                                    </a>
                                 <a href="#" class="button">
                                     <i class="bi bi-info-circle"></i>
                                     Website Under Construction
@@ -887,7 +909,7 @@
                                         September 20-22, 2025
                                     </div>
                                 </div>
-                                <div class="header-right">
+                                <div class="card-footer">
                                     <span class="event-badge">In-Person</span>
                                     <div class="countdown">
                                         <span class="countdown-value"></span> until start
@@ -910,6 +932,11 @@
                                 </div>
                             </div>
                             <div class="card-footer">
+                                <!-- Register Now -->
+                                <a href="https://go.fiu.edu/cc-hacks" class="button">
+                                    <i class="bi bi-info-circle"></i>
+                                    Register Now
+                                    </a>
                                 <a href="#" class="button">
                                     <i class="bi bi-info-circle"></i>
                                     Website Under Construction
@@ -926,7 +953,7 @@
                 <h3 class="event-title">EmpowHER Hackathon</h3>
                 <div class="event-date">
                     <i class="bi bi-calendar-event"></i>
-                    October 18-20, 2025
+                    October 13-20, 2025
                 </div>
             </div>
             <div class="header-right">
@@ -951,6 +978,11 @@
             </div>
         </div>
         <div class="card-footer">
+            <!-- Register Now -->
+            <a href="https://go.fiu.edu/cc-hacks" class="button">
+                <i class="bi bi-info-circle"></i>
+                Register Now
+                </a>
             <a href="#" class="button">
                 <i class="bi bi-info-circle"></i>
                 Website Under Construction
@@ -967,7 +999,7 @@
                 <h3 class="event-title">CodeFest</h3>
                 <div class="event-date">
                     <i class="bi bi-calendar-event"></i>
-                    December 12-14, 2025
+                    December 08-15, 2025
                 </div>
             </div>
             <div class="header-right">
@@ -992,6 +1024,11 @@
             </div>
         </div>
         <div class="card-footer">
+            <!-- Register Now -->
+            <a href="https://go.fiu.edu/cc-hacks" class="button">
+                <i class="bi bi-info-circle"></i>
+                Register Now
+                </a>
             <a href="#" class="button">
                 <i class="bi bi-info-circle"></i>
                 Website Under Construction
