--- a/all-eboard.html
+++ b/all-eboard.html
@@ -142,9 +142,9 @@
                         <a href="index.html" class="px-3 py-2 rounded-md text-sm font-medium hover:bg-blue-700">Home</a>
                         <a href="index.html#mission" class="px-3 py-2 rounded-md text-sm font-medium hover:bg-blue-700">Mission</a>
                         <a href="index.html#events" class="px-3 py-2 rounded-md text-sm font-medium hover:bg-blue-700">Events</a>
-                        <a href="index.html#hackathons" class="px-3 py-2 rounded-md text-sm font-medium hover:bg-blue-700">Hackathons</a>
-                        <a href="membership.html" class="px-3 py-2 rounded-md text-sm font-medium hover:bg-blue-700">Membership</a>
-                        <a href="#" class="px-3 py-2 rounded-md text-sm font-medium bg-blue-700">Join Executive-Board</a>
+                        <a href="hackathons.html" class="px-3 py-2 rounded-md text-sm font-medium hover:bg-blue-700">Hackathons</a>
+                        <a href="community-access.html" class="px-3 py-2 rounded-md text-sm font-medium hover:bg-blue-700">Membership</a>
+                        <a href="all-eboard.html" class="px-3 py-2 rounded-md text-sm font-medium bg-blue-700">Join Executive-Board</a>
                         <a href="index.html#resources" class="px-3 py-2 rounded-md text-sm font-medium hover:bg-blue-700">Our Team</a>
                         <a href="index.html#resources" class="px-3 py-2 rounded-md text-sm font-medium hover:bg-blue-700">Gallery</a>
                         <a href="index.html#resources" class="px-3 py-2 rounded-md text-sm font-medium hover:bg-blue-700">Resources</a>
@@ -216,7 +216,7 @@
                 <a href="index.html#mission" class="block px-3 py-2 rounded-md text-base font-medium hover:bg-blue-700">Mission</a>
                 <a href="index.html#events" class="block px-3 py-2 rounded-md text-base font-medium hover:bg-blue-700">Events</a>
                 <a href="hackathons.html" class="block px-3 py-2 rounded-md text-base font-medium hover:bg-blue-700">Hackathons</a>
-                <a href="membership.html" class="block px-3 py-2 rounded-md text-base font-medium hover:bg-blue-700">Membership</a>
+                <a href="community-access.html" class="block px-3 py-2 rounded-md text-base font-medium hover:bg-blue-700">Membership</a>
                 <a href="all-eboard.html" class="block px-3 py-2 rounded-md text-base font-medium bg-blue-700">Join Executive-Board</a>
                 <a href="index.html#resources" class="block px-3 py-2 rounded-md text-base font-medium hover:bg-blue-700">Our Team</a>
                 <a href="index.html#resources" class="block px-3 py-2 rounded-md text-base font-medium hover:bg-blue-700">Gallery</a>
