--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 </section>
 
         <!-- Hackathons Section -->
-        <section id="hackathons-main" class="py-16 bg-white">
+        <section id="hackathons" class="py-16 bg-white">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
                 <h2 class="text-3xl font-bold mb-8 text-center">Hackathons <span class="star">✨</span></h2>
                 
