--- a/all-eboard.html
+++ b/all-eboard.html
@@ -158,11 +158,11 @@
                         </svg>
                     </button>
                     <div class="dropdown-content">
-                        <a href="https://go.fiu.edu/colorstackatfiu" target="_blank" rel="noopener noreferrer" 
+                        <a href="https://ba-00001.github.io/colorstackatfiu/" target="_blank" rel="noopener noreferrer" 
                             class="block px-4 py-2 text-sm text-white hover:bg-blue-700">
                             ColorStack at FIU
                         </a>
-                        <a href="https://go.fiu.edu/cahsiatfiu" target="_blank" rel="noopener noreferrer" 
+                        <a href="https://ba-00001.github.io/CAHSIatFIU/" target="_blank" rel="noopener noreferrer" 
                             class="block px-4 py-2 text-sm text-white hover:bg-blue-700">
                             CAHSI at FIU
                         </a>
