--- a/index.html
+++ b/index.html
@@ -151,12 +151,12 @@
     <!-- Mobile Navigation -->
     <div id="mobile-menu" class="hidden md:hidden">
         <div class="px-2 pt-2 pb-3 space-y-1 sm:px-3">
-            <a href="index.html" class="block px-3 py-2 rounded-md text-base font-medium hover:bg-blue-700">Home</a>
-            <a href="index.html#mission" class="block px-3 py-2 rounded-md text-base font-medium hover:bg-blue-700">Mission</a>
-            <a href="index.html#events" class="block px-3 py-2 rounded-md text-base font-medium hover:bg-blue-700">Events</a>
-            <a href="hackathons.html" class="block px-3 py-2 rounded-md text-base font-medium hover:bg-blue-700">Hackathons</a>
+            <a href="index.html"           class="block px-3 py-2 rounded-md text-base font-medium bg-blue-700">Home</a>
+            <a href="index.html#mission"   class="block px-3 py-2 rounded-md text-base font-medium hover:bg-blue-700">Mission</a>
+            <a href="index.html#events"     class="block px-3 py-2 rounded-md text-base font-medium hover:bg-blue-700">Events</a>
+            <a href="hackathons.html"        class="block px-3 py-2 rounded-md text-base font-medium hover:bg-blue-700">Hackathons</a>
             <a href="community-access.html" class="block px-3 py-2 rounded-md text-base font-medium hover:bg-blue-700">Membership</a>
-            <a href="all-eboard.html" class="block px-3 py-2 rounded-md text-base font-medium bg-blue-700">Join Executive-Board</a>
+            <a href="all-eboard.html"       class="block px-3 py-2 rounded-md text-base font-medium hover:bg-blue-700">Join Executive-Board</a>
             <a href="index.html#resources" class="block px-3 py-2 rounded-md text-base font-medium hover:bg-blue-700">Our Team</a>
             <a href="index.html#resources" class="block px-3 py-2 rounded-md text-base font-medium hover:bg-blue-700">Gallery</a>
             <a href="index.html#resources" class="block px-3 py-2 rounded-md text-base font-medium hover:bg-blue-700">Resources</a>
