--- a/community-access.html
+++ b/community-access.html
@@ -267,7 +267,7 @@
                     </div>
                     
                     <div class="text-center">
-                        <a href="https://forms.gle/n5PGYxjQJrrjirv99" target="_blank" rel="noopener noreferrer" 
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSf2MzXcam5cq-65Z668OF922q1aYqW464AWiLRO7b9v4cKnQg/viewform?usp=dialog" target="_blank" rel="noopener noreferrer" 
                            class="inline-block cc-orange cc-blue-text px-8 py-4 rounded-lg text-lg font-bold shadow-lg hover:bg-yellow-400 transition-colors transform hover:scale-105 duration-200">
                             FILL OUT MEMBERSHIP FORM
                         </a>
