--- a/hackathons.html
+++ b/hackathons.html
@@ -937,9 +937,9 @@
                                     <i class="bi bi-info-circle"></i>
                                     Register Now
                                     </a>
-                                <a href="#" class="button">
+                                <a href="305-HACK-FALL2025.html" class="button">
                                     <i class="bi bi-info-circle"></i>
-                                    Website Under Construction
+                                    Learn More
                                 </a>
                             </div>
                         </div>
