--- a/index.html
+++ b/index.html
@@ -512,7 +512,9 @@
                                     <i class="fas fa-users text-xl"></i>
                                     <span class="text-xs mt-1">GroupMe</span>
                                 </a>
-                                <a href="https://go.fiu.edu/codecrunch-zoom" class="flex flex-col items-center text-white hover:text-yellow-300 transition duration-200">
+                                <!-- Zoom
+                                https://go.fiu.edu/codecrunch-zoom -->
+                                <a href="https://fiu.zoom.us/j/84519758626?pwd=SoHxgbkfCrTLCjwy0faEKjdG2cQKYx.1#success" class="flex flex-col items-center text-white hover:text-yellow-300 transition duration-200">
                                     <i class="fas fa-video text-xl"></i>
                                     <span class="text-xs mt-1">Zoom</span>
                                 </a>
@@ -524,11 +526,14 @@
                                     <i class="fas fa-briefcase text-xl"></i>
                                     <span class="text-xs mt-1">EpicHire</span>
                                 </a>
-                                <a href="https://go.fiu.edu/CC-SCHEDULE" class="flex flex-col items-center text-white hover:text-yellow-300 transition duration-200">
+                                <!-- https://go.fiu.edu/CC-SCHEDULE -->
+                                <a href="https://docs.google.com/document/d/1ylVviQu2pvgRRjEJTpgttM6h-pgCoWCF72ATOZIyLnM/edit?tab=t.0#heading=h.lrix7ec7j0b3" class="flex flex-col items-center text-white hover:text-yellow-300 transition duration-200">
                                     <i class="fas fa-book text-xl"></i>
                                     <span class="text-xs mt-1 text-center">Course Schedule</span>
                                 </a>
-                                <a href="https://forms.gle/StgULTsytrcfZXBv6" class="flex flex-col items-center text-white hover:text-yellow-300 transition duration-200">
+                                 <!-- Attendance -->
+                                <!-- https://forms.gle/StgULTsytrcfZXBv6 -->                                   
+                                <a href="https://docs.google.com/forms/d/e/1FAIpQLSevXbZJFyVygCM-jbfTrw_LxRR_CQSpjm-mFgitQDCTS48Fbw/viewform" class="flex flex-col items-center text-white hover:text-yellow-300 transition duration-200">
                                     <i class="fas fa-clipboard-check text-xl"></i>
                                     <span class="text-xs mt-1">Attendance</span>
                                 </a>
