--- a/hackathons.html
+++ b/hackathons.html
@@ -937,7 +937,7 @@
                                     <i class="bi bi-info-circle"></i>
                                     Register Now
                                     </a>
-                                <a href="305-HACK-FALL2025.html" class="button">
+                                <a href="HACK-5-305-HACK-FALL2025.html" class="button">
                                     <i class="bi bi-info-circle"></i>
                                     Learn More
                                 </a>
