--- a/HACK-5-305-HACK-FALL2025.html
+++ b/HACK-5-305-HACK-FALL2025.html
@@ -1067,10 +1067,21 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
     <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
             <img src="https://github.com/user-attachments/assets/c359ccd5-2470-4ba5-a8fe-a32ee12a4e0a" alt="Code Crunch Logo" height="40" class="me-2">
             <span class="hackathon-name">305 Fall Hackathon</span>
         </a>
+                <!-- Color Stack Logo -->
+                <a class="navbar-brand me-3" href="https://go.fiu.edu/colorstackatfiu">
+                    <img src="https://github.com/user-attachments/assets/0e2f3b36-a64a-4b73-bd28-e919853a4036" alt="Color Stack at FIU Logo" height="40" class="me-1" />
+
+                </a>
+                
+                <!-- CAHSI Logo -->
+                <a class="navbar-brand" href="https://go.fiu.edu/cahsiatfiu">
+                    <img src="https://github.com/user-attachments/assets/c4f4805e-db3b-47a2-9a7f-0b124a66dd85" alt="CAHSI at FIU Logo" height="40" class="me-1" />
+ 
+                </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -1087,6 +1098,9 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#event">During the Event</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="hacks-toolkit.html">Hacks Toolkit</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#faq">FAQ</a>
@@ -1879,9 +1893,9 @@
                     <a href="https://www.instagram.com/codecrunchfiu" class="social-icon" style="width: 40px; height: 40px; font-size: 18px;" target="_blank">
                         <i class="fab fa-instagram"></i>
                     </a>
-                    <a href="https://twitter.com/CodeCrunchFIU" class="social-icon" style="width: 40px; height: 40px; font-size: 18px;" target="_blank">
+                    <!-- <a href="https://twitter.com/CodeCrunchFIU" class="social-icon" style="width: 40px; height: 40px; font-size: 18px;" target="_blank">
                         <i class="fab fa-twitter"></i>
-                    </a>
+                    </a> -->
                     <a href="https://www.linkedin.com/company/codecrunchfiu" class="social-icon" style="width: 40px; height: 40px; font-size: 18px;" target="_blank">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
