--- a/hackathons.html
+++ b/hackathons.html
@@ -45,6 +45,7 @@
             line-height: 1.5;
             -webkit-font-smoothing: antialiased;
             -moz-osx-font-smoothing: grayscale;
+            padding-top: 80px; /* or match your navbar height */
         }
 
         .container {
@@ -623,9 +624,11 @@
         }
 
         /* Responsive Styles */
-        @media (max-width: 768px) {
-            .header-title {
-                font-size: 1.75rem;
+        @media (max-width: 576px) {
+            .nav-link {
+                font-size: 14px;
+                padding: 8px;
+            }
             }
             
             .card-header {
