--- a/HACK-4-SummerCodeX25.HTML
+++ b/HACK-4-SummerCodeX25.HTML
@@ -347,11 +347,13 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
+                <li class="nav-item"><a class="nav-link" href="hackathons.html">Hackathons</a></li>
                 <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                 <li class="nav-item"><a class="nav-link" href="#tracks">Tracks</a></li>
                 <li class="nav-item"><a class="nav-link" href="#timeline">Timeline</a></li>
                 <li class="nav-item"><a class="nav-link" href="#faq">FAQ</a></li>
                 <li class="nav-item"><a class="nav-link" href="#resources">Resources</a></li>
+                <li class="nav-item"><a class="nav-link" href="#contributors">Contributors</a></li>
             </ul>
         </div>
     </div>
