--- a/hackathons.html
+++ b/hackathons.html
@@ -846,7 +846,7 @@
                                     <i class="bi bi-info-circle"></i>
                                     Register Now
                                     </a>
-                                <a href="HACK-CODESTORM.HTML" class="button">
+                                <a href="HACK-3-CODESTORM.HTML" class="button">
                                     <i class="bi bi-info-circle"></i>
                                     Learn More
                                 </a>
